[gd_scene load_steps=22 format=3 uid="uid://s1ibsgb2hrak"]

[ext_resource type="Script" path="res://main.gd" id="1_vfhwu"]
[ext_resource type="Script" path="res://AnimationPlayer.gd" id="2_y215d"]
[ext_resource type="Texture2D" uid="uid://ck2nb3w88xjn2" path="res://drop_images_here.png" id="3_fyhgc"]
[ext_resource type="Script" path="res://user_guide.gd" id="3_ts8js"]

[sub_resource type="Animation" id="Animation_b77ox"]
length = 0.001

[sub_resource type="Animation" id="Animation_6bqsh"]
resource_name = "default"
length = 30.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ny2x6"]
_data = {
"RESET": SubResource("Animation_b77ox"),
"default": SubResource("Animation_6bqsh")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mnq2a"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 0.858824)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05nw1"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
border_width_left = 1
border_width_right = 1
border_width_bottom = 4
border_color = Color(0, 0, 0, 0.337255)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.231373)
shadow_size = 4
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2bl6a"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 3
border_color = Color(0, 0, 0, 0.717647)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.231373)
shadow_size = 4
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3v8y"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.560784)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 1

[sub_resource type="InputEventKey" id="InputEventKey_vm6ma"]
pressed = true
keycode = 32

[sub_resource type="Shortcut" id="Shortcut_2sucg"]
events = [SubResource("InputEventKey_vm6ma")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d206y"]
bg_color = Color(0, 0, 0, 0.152941)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="InputEventAction" id="InputEventAction_8mlpo"]
action = &"position"

[sub_resource type="Shortcut" id="Shortcut_b125g"]
events = [SubResource("InputEventAction_8mlpo")]

[sub_resource type="InputEventAction" id="InputEventAction_viw6x"]
action = &"rotation"

[sub_resource type="Shortcut" id="Shortcut_cynus"]
events = [SubResource("InputEventAction_viw6x")]

[sub_resource type="InputEventAction" id="InputEventAction_waeyv"]
action = &"scale"

[sub_resource type="Shortcut" id="Shortcut_bc6a2"]
events = [SubResource("InputEventAction_waeyv")]

[sub_resource type="LabelSettings" id="LabelSettings_1unwb"]
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.713726)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vfhwu")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
disable_3d = true
transparent_bg = true
handle_input_locally = false
gui_snap_controls_to_pixels = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Player" type="AnimationPlayer" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ny2x6")
}
script = ExtResource("2_y215d")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(48, 56)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -78.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_mnq2a")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -64.0
offset_right = -12.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0

[node name="play" type="Button" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "Play / Pause"
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_05nw1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2bl6a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g3v8y")
toggle_mode = true
shortcut = SubResource("Shortcut_2sucg")

[node name="Polygon2D" type="Polygon2D" parent="Panel/HBoxContainer/play"]
color = Color(1, 1, 1, 0.501961)
polygon = PackedVector2Array(13, 15, 39, 24, 13, 31)

[node name="Control" type="Control" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
anchors_preset = 0
offset_left = 52.0
offset_right = 64.0
offset_bottom = 48.0

[node name="timeline" type="HSlider" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 68.0
offset_right = 1108.0
offset_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 30.0
step = 0.01

[node name="Control2" type="Control" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
anchors_preset = 0
offset_left = 1112.0
offset_right = 1124.0
offset_bottom = 48.0

[node name="Button2" type="Button" parent="Panel/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
offset_left = 1076.0
offset_right = 1124.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "Auto play the next animation"
focus_mode = 0
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_05nw1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2bl6a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g3v8y")
disabled = true
toggle_mode = true

[node name="Polygon2D" type="Polygon2D" parent="Panel/HBoxContainer/Button2"]
color = Color(0.752941, 0.752941, 0.752941, 0.219608)
polygon = PackedVector2Array(10, 4, 35, 4, 43, 10, 43, 20, 34, 25, 22, 25, 17, 27, 17, 32, 21, 34, 27, 34, 27, 30, 38, 35, 27, 41, 27, 38, 19, 37, 13, 34, 13, 25, 19, 21, 33, 21, 39, 17, 39, 13, 34, 9, 10, 9)

[node name="Tracks" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -196.0
offset_top = 5.0
offset_right = -43.0
offset_bottom = 177.0
grow_horizontal = 0

[node name="GridContainer" type="VBoxContainer" parent="Tracks"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="HBoxContainer" parent="Tracks/GridContainer"]
layout_mode = 2
offset_right = 147.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="Tracks/GridContainer/Control"]
custom_minimum_size = Vector2(38, 24)
layout_mode = 2
offset_top = 2.0
offset_right = 38.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_d206y")
text = "G"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Position" type="Button" parent="Tracks/GridContainer/Control"]
layout_mode = 2
offset_left = 42.0
offset_right = 119.0
offset_bottom = 31.0
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
shortcut = SubResource("Shortcut_b125g")
text = "Position
"
flat = true

[node name="no_pos" type="Button" parent="Tracks/GridContainer/Control"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
offset_left = 123.0
offset_right = 147.0
offset_bottom = 31.0
tooltip_text = "Clear Track"
focus_mode = 0
text = "x"
flat = true

[node name="Control3" type="HBoxContainer" parent="Tracks/GridContainer"]
layout_mode = 2
offset_top = 35.0
offset_right = 147.0
offset_bottom = 66.0

[node name="Label" type="Label" parent="Tracks/GridContainer/Control3"]
custom_minimum_size = Vector2(38, 24)
layout_mode = 2
offset_top = 2.0
offset_right = 38.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_d206y")
text = "R"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Rotation" type="Button" parent="Tracks/GridContainer/Control3"]
layout_mode = 2
offset_left = 42.0
offset_right = 119.0
offset_bottom = 31.0
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
shortcut = SubResource("Shortcut_cynus")
text = "Rotation"
flat = true

[node name="no_rot" type="Button" parent="Tracks/GridContainer/Control3"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
offset_left = 123.0
offset_right = 147.0
offset_bottom = 31.0
tooltip_text = "Clear Track"
focus_mode = 0
text = "x"
flat = true

[node name="Control2" type="HBoxContainer" parent="Tracks/GridContainer"]
layout_mode = 2
offset_top = 70.0
offset_right = 147.0
offset_bottom = 101.0

[node name="Label" type="Label" parent="Tracks/GridContainer/Control2"]
custom_minimum_size = Vector2(38, 24)
layout_mode = 2
offset_top = 2.0
offset_right = 38.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_d206y")
text = "H"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Visible" type="Button" parent="Tracks/GridContainer/Control2"]
layout_mode = 2
offset_left = 42.0
offset_right = 119.0
offset_bottom = 31.0
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
shortcut = SubResource("Shortcut_bc6a2")
text = "Hide"
flat = true

[node name="no_vis" type="Button" parent="Tracks/GridContainer/Control2"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
offset_left = 123.0
offset_right = 147.0
offset_bottom = 31.0
tooltip_text = "Clear Track"
focus_mode = 0
text = "x"
flat = true

[node name="Control4" type="HBoxContainer" parent="Tracks/GridContainer"]
layout_mode = 2
offset_top = 105.0
offset_right = 147.0
offset_bottom = 136.0

[node name="Label" type="Label" parent="Tracks/GridContainer/Control4"]
custom_minimum_size = Vector2(38, 24)
layout_mode = 2
offset_top = 2.0
offset_right = 38.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_d206y")
text = "S"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Visible" type="Button" parent="Tracks/GridContainer/Control4"]
layout_mode = 2
offset_left = 42.0
offset_right = 119.0
offset_bottom = 31.0
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
shortcut = SubResource("Shortcut_bc6a2")
text = "Scale"
flat = true

[node name="no_scale" type="Button" parent="Tracks/GridContainer/Control4"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
offset_left = 123.0
offset_right = 147.0
offset_bottom = 31.0
tooltip_text = "Clear Track"
focus_mode = 0
text = "x"
flat = true

[node name="onboarding" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_ts8js")
metadata/_edit_lock_ = true

[node name="DropImagesHere" type="TextureRect" parent="onboarding"]
modulate = Color(1, 1, 1, 0.286275)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fyhgc")

[node name="Label" type="Label" parent="onboarding"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -629.0
offset_top = 39.0
offset_right = -243.0
offset_bottom = 91.0
grow_horizontal = 0
mouse_filter = 0
mouse_default_cursor_shape = 16
text = "Hold down a key for each track to record
Set with the mouse anywhere on the canvas"
label_settings = SubResource("LabelSettings_1unwb")
horizontal_alignment = 2

[node name="Drawings" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_bottom = -78.0
grow_horizontal = 0
grow_vertical = 2

[node name="v" type="VBoxContainer" parent="Drawings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Add" type="Button" parent="Drawings/v"]
layout_mode = 2
offset_right = 39.0
offset_bottom = 31.0
tooltip_text = "Add Text"
text = "+"
flat = true

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -246.0
offset_top = -137.0
offset_right = -44.0
offset_bottom = -84.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Print_Button" type="CheckBox" parent="Panel2/HBoxContainer"]
layout_mode = 2
offset_left = 13.0
offset_right = 153.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Save  played frames as .png files "
text = "Live Render to"
alignment = 1

[node name="Button" type="Button" parent="Panel2/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_left = 157.0
offset_right = 189.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0

[node name="Polygon2D" type="Polygon2D" parent="Panel2/HBoxContainer/Button"]
position = Vector2(-994, -505.5)
color = Color(0.788235, 0.662745, 0.341176, 1)
polygon = PackedVector2Array(1002, 516, 1008, 516, 1009, 518, 1020, 518, 1020, 528, 1001, 528, 1001, 518)

[connection signal="animation_finished" from="SubViewportContainer/SubViewport/Player" to="SubViewportContainer/SubViewport/Player" method="_on_animation_finished"]
[connection signal="toggled" from="Panel/HBoxContainer/play" to="SubViewportContainer/SubViewport/Player" method="_on_play_toggled"]
[connection signal="drag_ended" from="Panel/HBoxContainer/timeline" to="SubViewportContainer/SubViewport/Player" method="_on_timeline_drag_ended"]
[connection signal="value_changed" from="Panel/HBoxContainer/timeline" to="SubViewportContainer/SubViewport/Player" method="_on_timeline_value_changed"]
[connection signal="pressed" from="Tracks/GridContainer/Control/no_pos" to="SubViewportContainer/SubViewport/Player" method="_on_no_pos_pressed"]
[connection signal="pressed" from="Tracks/GridContainer/Control3/no_rot" to="SubViewportContainer/SubViewport/Player" method="_on_no_rot_pressed"]
[connection signal="pressed" from="Tracks/GridContainer/Control2/no_vis" to="SubViewportContainer/SubViewport/Player" method="_on_no_vis_pressed"]
[connection signal="pressed" from="Tracks/GridContainer/Control4/no_scale" to="SubViewportContainer/SubViewport/Player" method="_on_no_scale_pressed"]
[connection signal="pressed" from="Drawings/v/Add" to="SubViewportContainer/SubViewport/Player" method="_on_add_pressed"]
[connection signal="toggled" from="Panel2/HBoxContainer/Print_Button" to="SubViewportContainer/SubViewport/Player" method="_on_print_button_toggled"]
[connection signal="pressed" from="Panel2/HBoxContainer/Button" to="." method="_on_button_pressed"]
